--- a/src/components/dataTable/DataTable.module.scss
+++ b/src/components/dataTable/DataTable.module.scss
@@ -37,6 +37,7 @@
     background-color: rgba(255, 255, 255, 1);
     width: 7px;
     height: 1px;
+    transition: 0.3s;
   }
 
   &::before {
@@ -49,6 +50,18 @@
     top: 9px;
     transform: rotate(-40deg);
     right: -33px;
+  }
+}
+
+.button.id-active,
+.button.body-active,
+.button.title-active {
+  &::before {
+    transform: rotate(-40deg);
+  }
+
+  &::after {
+    transform: rotate(40deg);
   }
 }
 
@@ -66,9 +79,12 @@
     background: none;
     border: none;
 
-    &::after,
+    &::after {
+      right: -10px;
+    }
+
     &::before {
-      display: none;
+      right: -5px;
     }
   }
 }
